# flare

./: .gitignore  cargo.toml  env.example  readme.md
flare-adapters/: Cargo.toml
flare-adapters/src/: ali_sms.rs  email.rs  im_dingding.rs  im_feishu.rs  lib.rs
flare-api/: Cargo.toml
flare-common/: Cargo.toml
flare-common/src/: config.rs  errors.rs  lib.rs
flare-common/src/enums/: channel.rs  message.rs  mod.rs
flare-core/: Cargo.toml
flare-core/src/: lib.rs  log.rs  notification.rs  sender.rs
flare-core/src/feishu/: message.rs
flare-storage/: Cargo.toml
flare-worker/: Cargo.toml
flare-worker/src/: handlers.rs  main.rs
