[package]
name = "flare-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flare-common = { path = "../flare-common" }
flare-core = { path = "../flare-core" }

tokio = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

lettre = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.21"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }