[package]
name = "flare-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flare-core = { path = "../flare-core" }
flare-common = { path = "../flare-common" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
