[package]
name = "flare-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }

lettre = { workspace = true }
reqwest = { workspace = true }
