[package]
name = "flare-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flare-common = { path = "../flare-common" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tera = { workspace = true }
handlebars = { workspace = true }
